Fix product page on mobile when long description present

--- a/modules/marketplace/views/css/productsellerdetails.css
+++ b/modules/marketplace/views/css/productsellerdetails.css
@@ -155,6 +155,6 @@
 }
 
 .page-product-box{
-	float: left !important;
+	/*float: left !important;*/
 	width: 100% !important;
 }
